fixed token id jump skip bug

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,14 @@
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 body {
   background-color: #0b0a0f;
